tests/baselines/reference/defaultBestCommonTypesHaveDecls.errors.txt
tests/cases/compiler/defaultBestCommonTypesHaveDecls.ts(2,6): error TS2339: Property 'length' does not exist on type '{}'.
tests/cases/compiler/defaultBestCommonTypesHaveDecls.ts(5,6): error TS2339: Property 'length' does not exist on type 'Object'.
tests/cases/compiler/defaultBestCommonTypesHaveDecls.ts(8,14): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/defaultBestCommonTypesHaveDecls.ts (3 errors) ====
    var obj1: {};
    obj1.length;
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    
    var obj2: Object;
    obj2.length;
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'Object'.
    
    function concat<T>(x: T, y: T): T { return null; }
    var result = concat(1, ""); // error
                 ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    var elementCount = result.length; 
    
    function concat2<T, U>(x: T, y: U) { return null; }
    var result2 = concat2(1, ""); // result2 will be number|string
    var elementCount2 = result.length; 
    
    